cattegamento de dados

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,1 +1,17 @@
- 
+ .products {
+    display: flex;
+    justify-content: center;
+    /*quebrar linha*/
+    flex-wrap: wrap; 
+ }
+
+ .products li {
+    border: 1px solid  #efefef;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    /*remover style (bolinha preta) do li */
+    list-style: none;
+    margin: 0 10px;
+    width: 25%;
+ }
